--- a/templates/components/Content/ItemListing.html.twig
+++ b/templates/components/Content/ItemListing.html.twig
@@ -1,9 +1,9 @@
 <div class="p-4 lg:w-1/3">
     <div class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
-        <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">Link</h2>
+        {% for tag in content.tags %} <twig:Tag tag="{{ tag }}" />{% endfor %}
         <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">{{ content.title }}</h1>
         <p class="leading-relaxed mb-3">{{ content.metaDescription }}</p>
-        <a class="text-pink-400 inline-flex items-center">Learn More
+        <a {% if content.isArticle %} href="{{ path('article_show', {slug: content.slug}) }}"{% endif %} class="text-pink-400 inline-flex items-center">Learn More
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
