--- a/templates/pages/content/article/show.html.twig
+++ b/templates/pages/content/article/show.html.twig
@@ -4,7 +4,7 @@
     <section class="text-gray-400 body-font bg-gray-900">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-col text-center w-full mb-12">
-                <h2 class="text-xs text-pink-400 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
+                {% for tag in article.tags %} <twig:Tag tag="{{ tag }}" />{% endfor %}
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">{{ article.title }}</h1>
             </div>
             <div class="lg:w-2/3 mx-auto">
