--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <twig:Content:Listing></twig:Content:Listing>
+    <twig:Content:Listing />
 {% endblock %}
