blog-23: added tags

--- a/templates/components/Content/ItemListing.html.twig
+++ b/templates/components/Content/ItemListing.html.twig
@@ -3,7 +3,7 @@
         {% for tag in content.tags %} <twig:Tag tag="{{ tag }}" />{% endfor %}
         <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">{{ content.title }}</h1>
         <p class="leading-relaxed mb-3">{{ content.metaDescription }}</p>
-        <a {% if content.isArticle %} href="{{ path('article_show', {slug: content.slug}) }}"{% endif %} class="text-pink-400 inline-flex items-center">Learn More
+        <a {% if content.isArticle is defined and content.isArticle %} href="{{ path('article_show', {slug: content.slug}) }}"{% endif %} class="text-pink-400 inline-flex items-center">Learn More
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M5 12h14"></path>
                 <path d="M12 5l7 7-7 7"></path>
